# ddrive

./: .env  .gitignore  Cargo.toml  README.md  justfile
.sqlx/: query-04371c2767e5e4f3e9a24cfcc7a8cc08d6d874705c21b852d9e8a646184681f9.json  query-08882749bc8810969e7e02d8ba2cc661e23c55b0d8ce278026dbef0da398af7b.json  query-1689d13df22350cc785e01608f65084413a6a8fb7dbefb76c2025dfbf8b2baea.json  query-248698dd784a877f73bab0592a521bf1b4c57ffcd8b757a44ba69f759338673d.json  query-297b12de6ad1d80f28c5477902834d65c82fc12e0a0a64f18a80c6ce9d6a8184.json  query-3c6ee6ceea58741916efbd4f61d4bc9c5f2b67d5bbb73ccb03fe0a8dcfaee777.json  query-43e1d62aed99ccb5ac142bfbe8e13756d39a9086f697894dc9311f371fc60604.json  query-511d4ede497219b25d7b673a7ec707699aa8b5ea62d41185d4d5aea14969a646.json  query-57077fc78cec954de6b89220691d27dd2ac8e449f0448a4e716417f6900de9d5.json  query-619a5e1f7fa1e4327886377a3ef46b946e4a04e8ccaff14e2d6a62e5ac5b85ba.json  query-632f0e2e1e4208aa74c89e39d7fc09b10d960d35c44aa1a114b7949da067465a.json  query-6540b3c2388b55abfde67f254eb684f2da86ba5e5ac668cbd2db288c8646a228.json  query-6957e8f01d1ac2153db88c1d4a89cd4e694af16f4bfc6bd3fccbd42c789cd205.json  query-6bae33a373fca455939e7f489f28a7dfae67f0b2f3b7f32235326357483377b4.json  query-6ca7de86885abec061e02385e5a2a24e970a4734216d91ef63f80e70b6e532fc.json  query-6fe36f5459d0be716c5010c8bcda1651c0e0416ed8bbefa8eddfde7149dd43ec.json  query-7c9aab1e024e5d2a4881cd86d76f0f94bea656b42ac4c55a601495fcf9560595.json  query-82edbe46653af7b74d259ffe333a3ca119acea24e8c126b9c27e63622448a6c9.json  query-945d0af54b8419ef92e1c504101887f8e19c39c1c36539d66c152ff56ced941d.json  query-9fca4f79777dc1e8db8ddfaeb1ba06fb6499ff09fa2cce8fb23cbeb5448eb9da.json  query-a7be73cd9bbacb5e1f7412256b8c94c3c8e1a1ce7dad33c0abf336b7687de1b6.json  (+10 more)
migrations/: 01_initial_schema.sql
src/: add.rs  (+16 more)
(+13 files in other folders)
