[package]
name = "ddrive"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "migrate",
] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0.12"
anyhow = "1.0"
blake3 = "1.5"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
csv = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glob = "0.3"
rayon = "1.8"
unicode-segmentation = "1.10"
strum = { version = "0.27", features = ["derive"] }
bs58 = "0.5"
copy_on_write = "0.1.3"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
